--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
 
     <body>
-        <h1>Recipes Project</h1>
+        <h1><a href="./recipes/lasagna.html">Recipes Project</a></h1>
     </body>
 </html>
