--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
 
     <body>
-        <h1><a href="./recipes/lasagna.html">Recipes Project</a></h1>
+        <h1>Recipes Project</h1>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/pizza.html">Pizza</a></li>
+            <li><a href="./recipes/burger.html">Burger</a></li>
+        </ul>
     </body>
 </html>
