added css to recipe pages

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
+
 <body>
-    <h1>Lasagna recipe</h1>
-    <img src="../img/lasagna.jpg" alt="lasagna" width="400px">
-    <h2>Description</h2>
-    <p>Traditional lasagna recipe</p>
+    <div class="flex-container">
+        <div class="recipe-box">
+            <h1>Lasagna recipe</h1>
+            <img src="../img/lasagna.jpg" alt="lasagna" width="400px">
+            <h2>Description</h2>
+            <p>Traditional lasagna recipe</p>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 1/2 pounds ground beef</li>
-        <li>Cheese</li>
-        <li>Lasagna Sauce</li>
-        <li>Seasoning</li>
-    </ul>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>1 1/2 pounds ground beef</li>
+                <li>Cheese</li>
+                <li>Lasagna Sauce</li>
+                <li>Seasoning</li>
+            </ul>
 
-    <h2>Steps</h2>
-    <ol>
-        <li>Cook meat</li>
-        <li>Put in lasagna</li>
-        <li>Put Cheese</li>
-        <li>Eat</li>
-    </ol>
+            <h2>Steps</h2>
+            <ol>
+                <li>Cook meat</li>
+                <li>Put in lasagna</li>
+                <li>Put Cheese</li>
+                <li>Eat</li>
+            </ol>
+        </div>
+    </div>
 </body>
+
 </html>
