--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
     <head>
         <title>Recipes Project</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./styles/style.css">
     </head>
 
     <body>
-        <h1>Recipes Project</h1>
-        <ul>
-            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="./recipes/pizza.html">Pizza</a></li>
-            <li><a href="./recipes/burger.html">Burger</a></li>
-        </ul>
+
+        <div id="container">
+            <h1>Recipes Project</h1>
+            <h2>Check out our recipes</h2>
+            <ul>
+                <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+                <li><a href="./recipes/pizza.html">Pizza</a></li>
+                <li><a href="./recipes/burger.html">Burger</a></li>
+            </ul>
+        </div>
+        
     </body>
 </html>
